--- a/mod-02/package.json
+++ b/mod-02/package.json
@@ -4,9 +4,18 @@
   "description": "Advanced-TypeScript",
   "main": "index.js",
   "scripts": {
+    "pack": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "ts-loader": "^2.0.0",
+    "typescript": "^2.1.6",
+    "webpack": "^2.2.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.4"
+  }
 }
